--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 
 <div class="intro">
-  <h1 class="introText">Why am I so bad at design</h1>
-  <input type="text" placeholder="Imagine a Place...lol" class="introText" id="searchBar">
+  <h1 class="introText">Explore District 6</h1>
+  <input type="text" placeholder="Search..." class="introText" id="searchBar">
   <img id="searchIcon" src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
   <h1 id="hi"></h1>
 </div> 
