--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
     <div id="map"></div>
 
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+<script src="script.js"></script>
 
     <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAC9KoSC0p7kn8nMeTuE7Rh_I9fNaAfKTI&callback=initMap">
     </script>
