--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Maximind</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,10 @@
 </nav>
 
 
-<div class="intro">
+<div class="intro" id="box">
   <h1 class="introText">Explore District 6</h1>
-  <input type="text" placeholder="Search..." class="introText" id="searchBar">
-  <img id="searchIcon" src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
+  <input type="text" placeholder="Search..." class="search" id="searchBar">
+  <img id="searchIcon" class="searchIcon"src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
   <h1 id="hi"></h1>
 </div> 
 
