--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
   <body>
     <script src="script.js"></script>
     <h5>The most powerful virtual tour on earth</h5>
-    <h2>We are a crew of two</h2>
-    <p>THIS IS A LOT OF TEXT</p>
+    <h2>We're high schoolers, programmers, designers, and producers.</h2>
+    <p>We have a drive to produce the most quality applications for our users and the world.</p>
+    <img src="./pictures/search icon.png" alt="Team Photos">
   </body>
 </html>
