--- a/about.html
+++ b/about.html
@@ -11,6 +11,6 @@
     <h5>The most powerful virtual tour on earth</h5>
     <h2>We're high schoolers, programmers, designers, and producers.</h2>
     <p>We have a drive to produce the most quality applications for our users and the world.</p>
-    <img src="./pictures/search icon.png" alt="Team Photos">
+    <img src="./pictures/Team Photo.jpg" alt="Team Photos">
   </body>
 </html>
