--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <div class="sidebar">
   <div class="logoContent">
     <div class="sidebarLogo">
-      <i class='bx bxs-map-pin' ></i>
+      <i class='bx bxs-map-pin'></i>
       <div class="logoText">Test</div>
     </div>
   </div>
@@ -80,7 +80,9 @@
   <h1 class="introText">Explore District 6</h1>
   <input type="text" placeholder="Search..." class="search" id="searchBar">
   <img id="searchIcon" class="searchIcon"src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
+  <!--<i class='bx bx-search-alt' id="searchIcon" alt="search icon"></i>-->
   <h1 id="hi"></h1>
+  <i class='bx bx-arrow-back' id="backArrow"></i>
 </div> 
 
 <div id="map"></div>
