--- a/about.html
+++ b/about.html
@@ -5,12 +5,67 @@
     <meta name="viewport" content="width=device-width">
     <title>repl.it</title>
     <link href="about.css" rel="stylesheet" type="text/css" />
+    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <script src="script.js"></script>
+
+
+<div class="sidebar">
+  <div class="logoContent">
+    <div class="sidebarLogo">
+      <i class='bx bxs-map-pin'></i>
+      <div class="logoText">Test</div>
+    </div>
+  </div>
+  <i class='bx bx-menu' id="sidebarButton" ></i>
+
+  <ul class="navList">
+    <li>
+      <a href="index.html">
+        <i class='bx bx-home-alt'></i>
+       <span class="itemName">Home</span>
+      </a>
+    </li>
+    <li> 
+      <a href="about.html">
+        <i class='bx bx-group' ></i>
+       <span class="itemName">About</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-tired' ></i>
+       <span class="itemName">Example</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-tired' ></i>
+       <span class="itemName">Example</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-tired' ></i>
+       <span class="itemName">Example</span>
+      </a>
+    </li>
+    <li>
+      <a href="#">
+        <i class='bx bx-tired' ></i>
+       <span class="itemName">Example</span>
+      </a>
+    </li>
+  </ul>
+
+</div>
+
+
     <h5>The most powerful virtual tour on earth</h5>
     <h2>We're high schoolers, programmers, designers, and producers.</h2>
     <p>We have a drive to produce the most quality applications for our users and the world.</p>
     <img src="./pictures/Team Photo.jpg" alt="Team Photos">
+    <script src="script.js"></script>
+    <script src="sidebar.js"></script>
   </body>
 </html>
