--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
 
   <ul class="navList">
     <li>
-      <a href="about.html">
-        <i class='bx bxs-face' ></i>
-       <span class="itemName">About</span>
+      <a href="index.html">
+        <i class='bx bx-home-alt'></i>
+       <span class="itemName">Home</span>
       </a>
     </li>
     <li> 
-      <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
+      <a href="about.html">
+        <i class='bx bx-group' ></i>
+       <span class="itemName">About</span>
       </a>
     </li>
     <li>
