added images pt.1

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <h1 id="hi"></h1>
   <i class='bx bx-arrow-back' id="backArrow"></i>
 </div> 
+<div id="landmarkImage"></div>
 
 <div id="map"></div>
     
