--- a/about.html
+++ b/about.html
@@ -1,71 +1,87 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="about.css" rel="stylesheet" type="text/css" />
-    <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-  </head>
-  <body>
+<div class="bg-light">
+  <div class="container py-5">
+    <div class="row h-100 align-items-center py-5">
+      <div class="col-lg-6">
+        <h1 class="display-4">About us</h1>
+        <p class="lead text-muted mb-0">Find out about the team and motivation behind the scenes.</p>
 
-
-<div class="sidebar">
-  <div class="logoContent">
-    <div class="sidebarLogo">
-      <i class='bx bxs-map-pin'></i>
-      <div class="logoText">Test</div>
+      </div>
+      <div class="col-lg-6 d-none d-lg-block"><img src="https://bootstrapious.com/i/snippets/sn-about/illus.png" alt="" class="img-fluid"></div>
     </div>
   </div>
-  <i class='bx bx-menu' id="sidebarButton" ></i>
+</div>
 
-  <ul class="navList">
-    <li>
-      <a href="index.html">
-        <i class='bx bx-home-alt'></i>
-       <span class="itemName">Home</span>
-      </a>
-    </li>
-    <li> 
-      <a href="about.html">
-        <i class='bx bx-group' ></i>
-       <span class="itemName">About</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
-      </a>
-    </li>
-    <li>
-      <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
-      </a>
-    </li>
-  </ul>
+<div class="bg-white py-5">
+  <div class="container py-5">
+    <div class="row align-items-center mb-5">
+      <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
+        <h2 class="font-weight-light">We have a vision.</h2>
+        <p class="font-italic text-muted mb-4">We want local attractions to be discovered by tourists and students around the country.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn more about maxmind</a>
+      </div>
+      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://bootstrapious.com/i/snippets/sn-about/img-1.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+    </div>
+    <div class="row align-items-center">
+      <div class="col-lg-5 px-5 mx-auto"><img src="https://bootstrapious.com/i/snippets/sn-about/img-2.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
+      <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
+        <h2 class="font-weight-light">We have a passion for digital creation.</h2>
+        <p class="font-italic text-muted mb-4">From building websites to creating 3D models, we are fascinated by what the internet can do.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">See more projects</a>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div class="bg-light py-5">
+  <div class="container py-5">
+    <div class="row mb-4">
+      <div class="col-lg-5">
+        <h2 class="display-4 font-weight-light">Our team</h2>
+        <p class="font-italic text-muted">of two.</p>
+      </div>
+    </div>
+
+    <div class="row text-center">
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://i.postimg.cc/3JsW44fN/Avatar-Maker.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+          <h5 class="mb-0">Hunter Liao</h5><span class="small text-uppercase text-muted">Founder</span>
+          <ul class="social mb-0 list-inline mt-3">
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+
+      <!-- Team item-->
+      <div class="col-xl-3 col-sm-6 mb-5">
+        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://bootstrapious.com/i/snippets/sn-about/avatar-3.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+          <h5 class="mb-0">Bassil Shalaby</h5><span class="small text-uppercase text-muted">Founder</span>
+          <ul class="social mb-0 list-inline mt-3">
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
+          </ul>
+        </div>
+      </div>
+      <!-- End-->
+
+      <!-- Team item-->
+
+    </div>
+  </div>
 </div>
 
 
-    <h5>The most powerful virtual tour on earth</h5>
-    <h2>We're high schoolers, programmers, designers, and producers.</h2>
-    <p>We have a drive to produce the most quality applications for our users and the world.</p>
-    <img src="./pictures/Team Photo.jpg" alt="Team Photos">
-    <script src="script.js"></script>
-    <script src="sidebar.js"></script>
-  </body>
+<footer class="bg-light pb-5">
+  <div class="container text-center">
+    <p class="font-italic text-muted mb-0">&copy; Copyrights maxmind.com All rights reserved.</p>
+  </div>
+</footer>
 </html>
