contact us page

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
+        <i class='bx bx-message-dots' ></i>
+       <span class="itemName">Contact</span>
       </a>
     </li>
     <li>
