--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </a>
     </li>
     <li>
-      <a href="#">
+      <a href="contact.html">
         <i class='bx bx-message-dots' ></i>
        <span class="itemName">Contact</span>
       </a>
