linked contact page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="logoContent">
     <div class="sidebarLogo">
       <i class='bx bxs-map-pin'></i>
-      <div class="logoText">Test</div>
+      <div class="logoText">maxmind</div>
     </div>
   </div>
   <i class='bx bx-menu' id="sidebarButton" ></i>
