--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
+        <i class='bx bxs-graduation'></i>
+       <span class="itemName">Teachers</span>
       </a>
     </li>
     <li>
@@ -77,7 +77,7 @@
 </div>
 
 <div class="intro" id="box">
-  <h1 class="introText">Explore District 6</h1>
+  <h1 class="introText">Explore Your World!</h1>
   <input type="text" placeholder="Search..." class="search" id="searchBar">
   <img id="searchIcon" class="searchIcon"src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
   <!--<i class='bx bx-search-alt' id="searchIcon" alt="search icon"></i>-->
