--- a/contact.html
+++ b/contact.html
@@ -55,9 +55,9 @@
                     <label for="form_need">Topic *</label>
                     <select id="form_need" name="need" class="form-control" required="required" data-error="Please specify your need.">
                         <option value=""></option>
-                        <option value="Request landmark">Request quotation</option>
-                        <option value="Report bug">Request order status</option>
-                        <option value="Leave review">Request copy of an invoice</option>
+                        <option value="Request landmark">Request landmark</option>
+                        <option value="Report bug">Report bug</option>
+                        <option value="Leave review">Leave review</option>
                         <option value="Other">Other</option>
                     </select>
                     <div class="help-block with-errors"></div>
