ui stuff - i dont have the energy for this

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     </li>
     <li>
       <a href="#">
-        <i class='bx bx-tired' ></i>
-       <span class="itemName">Example</span>
+        <i class='bx bxs-graduation'></i>
+       <span class="itemName">Teachers</span>
       </a>
     </li>
     <li>
@@ -81,10 +81,25 @@
   <input type="text" placeholder="Search..." class="search" id="searchBar">
   <img id="searchIcon" class="searchIcon"src="https://www.freeiconspng.com/uploads/search-icon-png-1.png" alt="search icon">
   <!--<i class='bx bx-search-alt' id="searchIcon" alt="search icon"></i>-->
+  <h1 id="landmarkTitle"></h1>
   <h1 id="hi"></h1>
+  <div id="nearby"> 
+    <h1 id="nearbyTitle">Some Nearby Places to Visit Include! </h1> 
+    <!--<ul id="nearbyList">
+      <li>Washington Monument</li>
+      <li>Maryland Heights</li>
+      <li>Cacapon Mountain Overlook</li>
+      <li>Annapolis Rock</li>
+      <li>Crystal Grottoes Caverns</li>
+    </ul> -->
+  </div>
   <i class='bx bx-arrow-back' id="backArrow"></i>
 </div> 
 <div id="landmarkImage"></div>
+
+<div class="infoButtons"> <button class="buttons button1" onclick="window.open('http://google.com','_blank')">Website</button> <button class="buttons button2" onclick="window.open('http://google.com','_blank')">Take Me There</button> <button class="buttons button3" onclick="window.open('http://google.com','_blank')">Take a Virtual Tour!</button></div>
+
+
 
 <div id="map"></div>
     
