--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
   <h1 id="landmarkTitle"></h1>
   <h1 id="hi"></h1>
   <div id="nearby"> 
-    <h1 id="nearbyTitle">Some Nearby Places to Visit Include! </h1> 
-    <!--<ul id="nearbyList">
+    <!-- <h1 id="nearbyTitle">Some Nearby Places to Visit Include! </h1> 
+    <ul id="nearbyList">
       <li>Washington Monument</li>
       <li>Maryland Heights</li>
       <li>Cacapon Mountain Overlook</li>
@@ -96,6 +96,7 @@
   <i class='bx bx-arrow-back' id="backArrow"></i>
 </div> 
 <div id="landmarkImage"></div>
+
 
 <div class="infoButtons"> <button class="buttons button1" onclick="window.open('http://google.com','_blank')">Website</button> <button class="buttons button2" onclick="window.open('http://google.com','_blank')">Take Me There</button> <button class="buttons button3" onclick="window.open('http://google.com','_blank')">Take a Virtual Tour!</button></div>
 
